faltou o "type" no script do primeiro teste

--- a/paginas_teste/15alinhamentos.html
+++ b/paginas_teste/15alinhamentos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>15 Alinhamentos</title>
-    <script src="https://raw.githubusercontent.com/gustavorech/HtmlAlign/master/js/HtmlAlign.js"></script>
+    <script type="text/javascript" src="https://rawgit.com/gustavorech/HtmlAlign/master/js/HtmlAlign.js"></script>
 
     <style>
         panel {
