Adicionado delimitador de espaço sobre tamanhos percentuais e alguns novos testes

--- a/paginas_teste/apresentacao/apresentacao.html
+++ b/paginas_teste/apresentacao/apresentacao.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="utf-8" />
     <title>HtmlAlign</title>
-    <script type="text/javascript" src="https://rawgit.com/gustavorech/HtmlAlign/master/js/HtmlAlign.js"></script>
+    <script type="text/javascript" src="../../js/HtmlAlign.js"></script>
+    <link href="apresentacao.css" rel="stylesheet" />
 </head>
 <body>
+    <dock>
+        <panel class="menu">
+
+        </panel>
+        <panel class="main">
+            <panel>
+                <in>Oi</in>
+            </panel>
+        </panel>
+    </dock>
 </body>
 </html>
