mudança no charset

--- a/paginas_teste/apresentacao/apresentacao.html
+++ b/paginas_teste/apresentacao/apresentacao.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-    <meta charset="iso-8859-1" />
+    <meta http-equiv="X-UA-Compatible" content="text/html; charset=UTF-8">
+    <meta charset="iso-UTF-8" />
     <title>HtmlAlign</title>
     <script type="text/javascript" src="../../js/HtmlAlign.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
@@ -352,6 +352,9 @@
                     </stack>
                     <panel class="container-footer">
                         <panel class="img"></panel>
+                        <panel class="final">
+                            <in class="title">Este poster foi construído utilizando HTML, CSS e a implementação desse trabalho.</in>
+                        </panel>
                     </panel>
                 </stack>
             </stack>
