alteração do encoding

--- a/paginas_teste/apresentacao/apresentacao.html
+++ b/paginas_teste/apresentacao/apresentacao.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Ôªø<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="X-UA-Compatible" content="text/html; charset=UTF-8">
@@ -15,38 +15,38 @@
                     <panel class="img-left"></panel>
                     <panel class="img-right"></panel>
                     <stack class="center">
-                        <in>ALTERNATIVA DE LAYOUT PARA HTML COM BASE NO SISTEMA DE LAYOUT DIN¬MICO DO WPF</in>
+                        <in>ALTERNATIVA DE LAYOUT PARA HTML COM BASE NO SISTEMA DE LAYOUT DIN√ÇMICO DO WPF</in>
                         <in>Gustavo Rech</in>
-                        <in>Orientador: Prof. Jo„o Batista S. de Oliveira</in>
-                        <in>CiÍncia da ComputaÁ„o</in>
+                        <in>Orientador: Prof. Jo√£o Batista S. de Oliveira</in>
+                        <in>Ci√™ncia da Computa√ß√£o</in>
                         <in>gustavo.rech@acad.pucrs.br</in>
                     </stack>
                 </panel>
                 <stack class="body-container">
                     <in class="chamada" style="border: 0 solid #d7868c; border-width: 0 20px">
-                        <b>HTML</b> e <b>CSS</b>, as duas linguagens para descrever interfaces Web, s„o linguagens
-                        versateis e poderosas mas n„o È incomum nos depararmos com grandes dificuldades
-                        para atingirmos os resultados que almejamos. Como consequÍncia disso o tempo de
-                        desenvolvimento pode ser aumentado e, muitas vezes, n„o conseguimos reproduzir da
+                        <b>HTML</b> e <b>CSS</b>, as duas linguagens para descrever interfaces Web, s√£o linguagens
+                        versateis e poderosas mas n√£o √© incomum nos depararmos com grandes dificuldades
+                        para atingirmos os resultados que almejamos. Como consequ√™ncia disso o tempo de
+                        desenvolvimento pode ser aumentado e, muitas vezes, n√£o conseguimos reproduzir da
                         forma inicialmente projetada. Existe alguma forma de mitigar isso?
                     </in>
                     <panel class="texto-projeto">
                         <stack class="left">
                             <stack class="container-texto">
-                                <in class="title">MotivaÁ„o</in>
+                                <in class="title">Motiva√ß√£o</in>
                                 <in class="texto">
                                     Os navegadores foram projetados para disponibilizar documentos de forma digital e,
-                                    nos primÛrdios, para disponibilizar artigos cientÌficos entre universidades. O layout
-                                    foi projetado para documentos, como È a ferramenta Word da Microsoft, mas logo a ideia
-                                    de navegadores de internet expandiu, novos usu·rios comeÁaram a utilizar, e as p·ginas
-                                    passaram a disponibilizar documentos n„o mais restritos a artigos cientÌficos. O layout
-                                    precisava ser atualizado para comportar os novos conte˙dos, e ele foi, mas em cima do que j· existia.
+                                    nos prim√≥rdios, para disponibilizar artigos cient√≠ficos entre universidades. O layout
+                                    foi projetado para documentos, como √© a ferramenta Word da Microsoft, mas logo a ideia
+                                    de navegadores de internet expandiu, novos usu√°rios come√ßaram a utilizar, e as p√°ginas
+                                    passaram a disponibilizar documentos n√£o mais restritos a artigos cient√≠ficos. O layout
+                                    precisava ser atualizado para comportar os novos conte√∫dos, e ele foi, mas em cima do que j√° existia.
                                 </in>
                                 <in class="texto">
-                                    Hoje, um termo muito pesquisado em ferramentas de busca na internet È "CSS tricks",
-                                    truques para a utilizaÁ„o do CSS, e esse termo demonstra o que designers e
-                                    desenvolvedores Web precisam, muitas vezes, para criar o layout de uma p·gina, uma
-                                    vez que para atingir um determinado layout nem sempre h· algo declarativo e simples no CSS.
+                                    Hoje, um termo muito pesquisado em ferramentas de busca na internet √© "CSS tricks",
+                                    truques para a utiliza√ß√£o do CSS, e esse termo demonstra o que designers e
+                                    desenvolvedores Web precisam, muitas vezes, para criar o layout de uma p√°gina, uma
+                                    vez que para atingir um determinado layout nem sempre h√° algo declarativo e simples no CSS.
                                 </in>
                             </stack>
                         </stack>
@@ -54,22 +54,22 @@
                             <stack class="container-texto">
                                 <in class="title">Objetivo</in>
                                 <in class="texto">
-                                    Este trabalho tem por objetivo disponibilizar, para pessoas que n„o se adaptam bem com o
-                                    layout disponÌvel no CSS, uma nova opÁ„o de declaraÁ„o de layout, com a qual possam
-                                    se sentir mais confort·veis e reduzir a quantidade de declaraÁıes necess·rias para
-                                    chegar no resultado esperado. Ser· definido e apresentado um <b>superset</b> de
-                                    declaraÁıes sobre o HTML e CSS a fim de atingir uma soluÁ„o de layout em que os
+                                    Este trabalho tem por objetivo disponibilizar, para pessoas que n√£o se adaptam bem com o
+                                    layout dispon√≠vel no CSS, uma nova op√ß√£o de declara√ß√£o de layout, com a qual possam
+                                    se sentir mais confort√°veis e reduzir a quantidade de declara√ß√µes necess√°rias para
+                                    chegar no resultado esperado. Ser√° definido e apresentado um <b>superset</b> de
+                                    declara√ß√µes sobre o HTML e CSS a fim de atingir uma solu√ß√£o de layout em que os
                                     elementos possuam um posicionamento baseado no auto <b>dimensionamento</b> e <b>alinhamento</b>
                                     de elementos, e que o <b>comportamento</b> dos elementos dependa majoritariamente do elemento
                                     pai.
                                 </in>
                                 <in class="texto">
-                                    As declaraÁıes de layout especificadas e o comportamento resultante ser„o semelhantes
-                                    ‡s de aplicaÁıes tradicionais pensadas em janela e painÈis, e ter„o por base o sistema
-                                    de layout din‚mico implementado pelo <b>WPF</b>. A soluÁ„o de layout dever· funcionar em conjunto
-                                    com toda a estrutura j· existente do HTML e do CSS, com isso todo o poder de processamento
-                                    gr·fico j· implementado e otimizado nos navegadores junto a declaraÁ„o, interpretaÁ„o
-                                    e processamento do HTML e CSS ser„o aproveitados.
+                                    As declara√ß√µes de layout especificadas e o comportamento resultante ser√£o semelhantes
+                                    √†s de aplica√ß√µes tradicionais pensadas em janela e pain√©is, e ter√£o por base o sistema
+                                    de layout din√¢mico implementado pelo <b>WPF</b>. A solu√ß√£o de layout dever√° funcionar em conjunto
+                                    com toda a estrutura j√° existente do HTML e do CSS, com isso todo o poder de processamento
+                                    gr√°fico j√° implementado e otimizado nos navegadores junto a declara√ß√£o, interpreta√ß√£o
+                                    e processamento do HTML e CSS ser√£o aproveitados.
                                 </in>
                             </stack>
                         </stack>
@@ -77,9 +77,9 @@
                     <in class="chamada" style="border: 0 solid #d7868c; border-width: 0 20px">
                         <div class="title">HtmlAlign</div>
                         <div style="font-weight: 500">
-                            … um renderizador geomÈtrico din‚mico feito em javascript que atua sobre o renderizador do HTML e, a partir
-                            de um conjunto de declaraÁıes feitas sobre o HTML e o CSS, realiza o c·lculo de layout, posiciona os
-                            elementos na tela e detecta alteraÁıes de forma din‚mica.
+                            √â um renderizador geom√©trico din√¢mico feito em javascript que atua sobre o renderizador do HTML e, a partir
+                            de um conjunto de declara√ß√µes feitas sobre o HTML e o CSS, realiza o c√°lculo de layout, posiciona os
+                            elementos na tela e detecta altera√ß√µes de forma din√¢mica.
                         </div>
                     </in>
                     <stack class="features">
@@ -97,7 +97,7 @@
                                 <in class="title">Alinhamento Total</in>
                             </panel>
                             <in class="content">
-                                Todo elemento tem a liberdade de se posicionar como quiser no espaÁo entregue pelo elemento pai.
+                                Todo elemento tem a liberdade de se posicionar como quiser no espa√ßo entregue pelo elemento pai.
                             </in>
                         </stack>
                         <panel class="split"></panel>
@@ -106,16 +106,16 @@
                                 <in class="title">Comportamento no Elemento Pai</in>
                             </panel>
                             <in class="content">
-                                O elemento pai tem controle sobre os elementos filhos entregando espaÁos diferentes para cada um.
+                                O elemento pai tem controle sobre os elementos filhos entregando espa√ßos diferentes para cada um.
                             </in>
                         </stack>
                         <panel class="split"></panel>
                         <stack>
                             <panel class="title">
-                                <in class="title">ExtensÌvel</in>
+                                <in class="title">Extens√≠vel</in>
                             </panel>
                             <in class="content">
-                                Novos comportamentos e declaraÁıes podem ser adicionados.
+                                Novos comportamentos e declara√ß√µes podem ser adicionados.
                             </in>
                         </stack>
                     </stack>
@@ -169,8 +169,8 @@
                                 </grid>
                             </stack>
                             <stack>
-                                <in class="subtitle">DilimitaÁ„o de Tamanho:</in>
-                                <in class="subtitle" style="font-size: 40px; margin-top: -10px; margin-bottom: 10px">(por dimens„o)</in>
+                                <in class="subtitle">Dilimita√ß√£o de Tamanho:</in>
+                                <in class="subtitle" style="font-size: 40px; margin-top: -10px; margin-bottom: 10px">(por dimens√£o)</in>
                                 <stack class="delimitacoes">
                                     <stack>
                                         <in>Absoluto:</in>
@@ -211,7 +211,7 @@
                                 </stack>
                             </stack>
                             <stack>
-                                <in class="subtitle">DeclaraÁ„o:</in>
+                                <in class="subtitle">Declara√ß√£o:</in>
                                 <stack class="exemplo-declaracao">
                                     <in><span class="class">.wrapper</span> {</in>
                                     <in class="recuo">
@@ -352,18 +352,18 @@
                     <panel class="container-footer">
                         <panel class="img"></panel>
                         <stack class="final">
-                            <in class="title">Este poster foi construÌdo utilizando HTML, CSS e a implementaÁ„o deste trabalho.</in>
+                            <in class="title">Este poster foi constru√≠do utilizando HTML, CSS e a implementa√ß√£o deste trabalho.</in>
                             <panel>
                                 <stack class="qrcode-detalhes">
                                     <in>
-                                        Para acessar a vers„o em HTML utilize o QR-Code ao lado. … necess·rio utilizar um browser compatÌvel com <b>custom properties</b>
+                                        Para acessar a vers√£o em HTML utilize o QR-Code ao lado. √â necess√°rio utilizar um browser compat√≠vel com <b>custom properties</b>
                                         e <b>max-content</b>. Os browsers <b class="ok">Chrome</b>, <b class="ok">Firefox</b>, <b class="ok">Opera</b> e <b class="ok">Safari</b>
-                                        com versıes mais novas j· possuem essas features implementadas.
+                                        com vers√µes mais novas j√° possuem essas features implementadas.
                                     </in>
                                     <in>
-                                        Infelizmente o <b class="nok">Internet Explores</b> n„o È compatÌvel em todas as suas versıes. O <b class="nok">Microsoft Edge</b> ainda
-                                        n„o È compatÌvel, mas, segundo o site de acompanhamento de implementaÁ„o do Edge, j· est· em processo de
-                                        implementaÁ„o.
+                                        Infelizmente o <b class="nok">Internet Explores</b> n√£o √© compat√≠vel em todas as suas vers√µes. O <b class="nok">Microsoft Edge</b> ainda
+                                        n√£o √© compat√≠vel, mas, segundo o site de acompanhamento de implementa√ß√£o do Edge, j√° est√° em processo de
+                                        implementa√ß√£o.
                                     </in>
                                     <stack class="tecnologias">
                                         <panel class="img-css"></panel>
