problema: com zoom não detectava devtools

--- a/paginas_teste/apresentacao/apresentacao.html
+++ b/paginas_teste/apresentacao/apresentacao.html
@@ -4,6 +4,10 @@
     <meta http-equiv="X-UA-Compatible" content="text/html; charset=UTF-8">
     <title>HtmlAlign</title>
     <script type="text/javascript" src="../../js/HtmlAlign.js"></script>
+    <script type="text/javascript">
+        HtmlAlign.Config.VerifyStyleSheetPeriodicaly = true;
+        HtmlAlign.Config.VerifyStyleSheetPeriodicalyDelay = 400;
+    </script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="apresentacao.css" rel="stylesheet" />
 </head>
