--- a/paginas_teste/resultados.html
+++ b/paginas_teste/resultados.html
@@ -1,1 +1,58 @@
+﻿
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>Exemplos</title>
+    <script src="../js/HtmlAlign.js"></script>
+    <script type="text/javascript">
+        HtmlAlign.Config.VerifyStyleSheetPeriodicaly = true;
+        HtmlAlign.Config.VerifyStyleSheetPeriodicalyDelay = 400;
+    </script>
 
+    <style>
+
+        .title {
+            font-size: 24px;
+            margin: 10px;
+        }
+
+        a {
+            margin: 5px;
+            margin-left: 40px;
+        }
+    </style>
+</head>
+<body>
+    <wrap>
+        <wrap style="--wrap: top; --size: ~400 ~">
+            <div in class="title">- Ao visualizar os exemplos redimensione a tela para verificar o comportamento.</div>
+            <div in class="title">- Utilize as ferramentas de desenvolvedor e modifique os valores das propriedades CSS e/ou adicione ou remova elementos.</div>
+        </wrap>
+        <wrap style="--wrap: top">
+            <div in class="title">Exemplos básicos:</div>
+            <a in href="15alinhamentos.html" target="_blank">Exemplo de alinhamentos</a>
+            <a in href="stacks.html" target="_blank">Exemplos de empilhamentos</a>
+            <a in href="docktestesimples.html" target="_blank">Exemplo de acoplamento</a>
+            <a in href="flow1000.html" target="_blank">1000 elementos em flutuação</a>
+            <a in href="testeGrid.html" target="_blank">Exemplo de grade</a>
+        </wrap>
+        <wrap style="--wrap: top">
+            <div in class="title">Exemplos avançados:</div>
+            <a in href="streach300divs.html" target="_blank">300 paineis esticados um dentro do outro</a>
+            <a in href="testStackStar.html" target="_blank">Empilhamento com 3 paineis proporcionais</a>
+            <a in href="gridStar.html" target="_blank">Grade 4x4 totalmente proporcional</a>
+            <a in href="dockTeste.html" target="_blank">Diversos acoplamentos + 1 painel fit + alinhamentos e grade</a>
+            <a in href="testeGridMultiDireto.html" target="_blank">Grade 3x3 multiplas vezes uma dentro da outra</a>
+            <a in href="flowstressmedium.html" target="_blank">Flutuação com adição de elementos</a>
+            <a in href="flowstressveryhard-in-light.html" target="_blank">Flutuação com adição de elementos enumerados</a>
+            <a in href="flowstressveryhard-in-light2.html" target="_blank">Flutuação com adição de elementos enumerados x5</a>
+        </wrap>
+        <wrap style="--wrap: top">
+            <div in class="title">Exemplo de utilização:</div>
+            <a in href="apresentacao/apresentacao.html" target="_blank">Cartaz do TCC</a>
+            <a in href="Exemplos/PanelExemplos.html" target="_blank">Exemplos de comportamento</a>
+        </wrap>
+    </wrap>
+</body>
+</html>
