--- a/paginas_teste/15alinhamentos.html
+++ b/paginas_teste/15alinhamentos.html
@@ -2,8 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>15 Alinhamentos</title>
+    <title>Exemplos</title>
     <script src="../js/HtmlAlign.js"></script>
+    <script type="text/javascript">
+        HtmlAlign.Config.VerifyStyleSheetPeriodicaly = true;
+        HtmlAlign.Config.VerifyStyleSheetPeriodicalyDelay = 400;
+    </script>
 
     <style>
         panel {
