--- a/paginas_teste/flowstressveryhard-in-light.html
+++ b/paginas_teste/flowstressveryhard-in-light.html
@@ -2,8 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Flow Stress Very Hard</title>
+    <title>Exemplos</title>
     <script src="../js/HtmlAlign.js"></script>
+    <script type="text/javascript">
+        HtmlAlign.Config.VerifyStyleSheetPeriodicaly = true;
+        HtmlAlign.Config.VerifyStyleSheetPeriodicalyDelay = 400;
+    </script>
 
     <style>
         wrap {
@@ -54,78 +58,6 @@
             });
             if (flow.firstChild == undefined) flow.appendChild(panel);
             else flow.insertBefore(panel, flow.firstChild);
-
-            var panel = document.createElement("in");
-            panel.innerText = ++count;
-            panel.setAttribute("style", "--size: " + (count) + ";");
-            panel.setAttribute("hover", "");
-            panel.addEventListener("click", function () {
-                panel.component.Width = {
-                    width: panel.component.Width.width * 2 * Math.random()
-                };
-
-                panel.component.Height = {
-                    height: panel.component.Width.width * 2 * Math.random()
-                };
-            });
-            if (flow.firstChild == undefined) flow.appendChild(panel);
-            else flow.insertBefore(panel, flow.firstChild);
-
-            var panel = document.createElement("in");
-            panel.innerText = ++count;
-            panel.setAttribute("style", "--size: " + (count) + ";");
-            panel.setAttribute("hover", "");
-            panel.addEventListener("click", function () {
-                panel.component.Width = {
-                    width: panel.component.Width.width * 2 * Math.random()
-                };
-
-                panel.component.Height = {
-                    height: panel.component.Width.width * 2 * Math.random()
-                };
-            });
-            if (flow.firstChild == undefined) flow.appendChild(panel);
-            else flow.insertBefore(panel, flow.firstChild);
-
-            var panel = document.createElement("in");
-            panel.innerText = ++count;
-            panel.setAttribute("style", "--size: " + (count) + ";");
-            panel.setAttribute("hover", "");
-            panel.addEventListener("click", function () {
-                panel.component.Width = {
-                    width: panel.component.Width.width * 2 * Math.random()
-                };
-
-                panel.component.Height = {
-                    height: panel.component.Width.width * 2 * Math.random()
-                };
-            });
-            if (flow.firstChild == undefined) flow.appendChild(panel);
-            else flow.insertBefore(panel, flow.firstChild);
-
-            var panel = document.createElement("in");
-            panel.innerText = ++count;
-            panel.setAttribute("style", "--size: " + (count) + ";");
-            panel.setAttribute("hover", "");
-            panel.addEventListener("click", function () {
-                panel.component.Width = {
-                    width: panel.component.Width.width * 2 * Math.random()
-                };
-
-                panel.component.Height = {
-                    height: panel.component.Width.width * 2 * Math.random()
-                };
-            });
-            if (flow.firstChild == undefined) flow.appendChild(panel);
-            else flow.insertBefore(panel, flow.firstChild);
-
-            //for (var index = 0; index < flow.component.Children.length; index++) {
-            //    var child = flow.component.Children[index];
-            //    child.Width = { width: child.Width.width + 1 };
-            //    child.Height = { height: child.Height.height + 1 };
-            //}
-
-
 
             setTimeout(criarElementos, 4);
         };
