--- a/paginas_teste/gridStar.html
+++ b/paginas_teste/gridStar.html
@@ -4,16 +4,12 @@
     <meta charset="utf-8" />
     <title>Exemplos</title>
     <script src="../js/HtmlAlign.js"></script>
-    <script type="text/javascript">
-        HtmlAlign.Config.VerifyStyleSheetPeriodicaly = true;
-        HtmlAlign.Config.VerifyStyleSheetPeriodicalyDelay = 400;
-    </script>
 
     <style>
         grid {
             --align: center;
             --size: 99%;
-            --grid: 20% 45% 35%, 15% 55% 30%;
+            --grid: * * * *, * * * *;
         }
 
         panel {
@@ -29,12 +25,19 @@
         <panel style="--place: 0 0"></panel>
         <panel style="--place: 0 1"></panel>
         <panel style="--place: 0 2"></panel>
+        <panel style="--place: 0 3"></panel>
         <panel style="--place: 1 0"></panel>
         <panel style="--place: 1 1"></panel>
         <panel style="--place: 1 2"></panel>
+        <panel style="--place: 1 3"></panel>
         <panel style="--place: 2 0"></panel>
         <panel style="--place: 2 1"></panel>
         <panel style="--place: 2 2"></panel>
+        <panel style="--place: 2 3"></panel>
+        <panel style="--place: 3 0"></panel>
+        <panel style="--place: 3 1"></panel>
+        <panel style="--place: 3 2"></panel>
+        <panel style="--place: 3 3"></panel>
     </grid>
 </body>
 </html>
