--- a/paginas_teste/teste-hadiv.html
+++ b/paginas_teste/teste-hadiv.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>15 Alinhamentos</title>
+    <title>Exemplos</title>
     <script src="../js/HtmlAlign.js"></script>
 
     <style>
