--- a/paginas_teste/testeFit.html
+++ b/paginas_teste/testeFit.html
@@ -1,8 +1,12 @@
 ﻿<html>
 <head>
     <meta charset="utf-8">
-    <title>Fit</title>
+    <title>Exemplos</title>
     <script src="../js/HtmlAlign.js"></script>
+    <script type="text/javascript">
+        HtmlAlign.Config.VerifyStyleSheetPeriodicaly = true;
+        HtmlAlign.Config.VerifyStyleSheetPeriodicalyDelay = 400;
+    </script>
 
     <style title="text/css">
         fit {
