--- a/paginas_teste/teste_max_content.html
+++ b/paginas_teste/teste_max_content.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>15 Alinhamentos</title>
+    <title>Exemplos</title>
 
     <style type="text/css">
         #el1 {
