--- a/paginas_teste/teste_twoid.html
+++ b/paginas_teste/teste_twoid.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>15 Alinhamentos</title>
+    <title>Exemplos</title>
     <script type="text/javascript" src="https://rawgit.com/gustavorech/HtmlAlign/master/js/HtmlAlign.js"></script>
 
     <script type="text/javascript">
