apresentação de slides

--- a/paginas_teste/resultados.html
+++ b/paginas_teste/resultados.html
@@ -42,7 +42,7 @@
             <a in href="streach300divs.html" target="_blank">300 paineis esticados um dentro do outro</a>
             <a in href="testStackStar.html" target="_blank">Empilhamento com 3 paineis proporcionais</a>
             <a in href="gridStar.html" target="_blank">Grade 4x4 totalmente proporcional</a>
-            <a in href="dockTeste.html" target="_blank">Diversos acoplamentos + 1 painel fit + alinhamentos e grade</a>
+            <a in href="dockteste.html" target="_blank">Diversos acoplamentos + 1 painel fit + alinhamentos e grade</a>
             <a in href="testeGridMultiDireto.html" target="_blank">Grade 3x3 multiplas vezes uma dentro da outra</a>
             <a in href="flowstressmedium.html" target="_blank">Flutuação com adição de elementos</a>
             <a in href="flowstressveryhard-in-light.html" target="_blank">Flutuação com adição de elementos enumerados</a>
