apresentação de slides parte 2

--- a/paginas_teste/slides/inicio.html
+++ b/paginas_teste/slides/inicio.html
@@ -50,7 +50,7 @@
         <panel id="slider">
 
             <panel id="slide0_0" class="slide">
-                <in class="big-title" style="color: rgb(33, 33, 146);">Alternativa de layout dinâmico para HTML com base no sistema de layout dinâmico do WPF</in>
+                <in class="big-title" style="color: rgb(33, 33, 146);">Alternativa de layout para HTML com base no sistema de layout dinâmico do WPF</in>
                 <in class="sml" style="--align: bottom center; margin-bottom: 10px;">Gustavo Rech</in>
             </panel>
 
@@ -151,6 +151,22 @@
             <panel id="slide13_0" class="slide">
                 <in class="big-title vbg">Modelo de Caixa</in>
             </panel>
+
+
+
+            <!--------------------------------- 13 -------------------------------->
+            <dock id="slide13_3" class="slide">
+                <panel class="title"><in>Modelo de Caixa</in></panel>
+                <in class="title-ad sml">margin: 20px; border: 5px dashed black; padding: 40px;</in>
+                <panel class="content">
+                    <panel class="grey" style="--align: center; overflow: hidden; --size: 80%">
+                        <panel class="red" style="margin: 20px; border: 5px dashed black; padding: 40px;">
+                            <panel class="blue">
+                            </panel>
+                        </panel>
+                    </panel>
+                </panel>
+            </dock>
 
 
 
@@ -669,10 +685,95 @@
 
 
 
+            <!--------------------------------- 21 -------------------------------->
+            <dock id="slide21_3" class="slide">
+                <style type="text/css">
+                    #imgComp { background: url(no-change-tree.png) no-repeat center center; background-size: 600px; }
+                </style>
+                <panel class="title"><in>Composição</in></panel>
+                <panel id="imgComp" class="content">
+
+                </panel>
+            </dock>
+
+
+
             <!--------------------------------- 23 -------------------------------->
             <panel id="slide23_0" class="slide">
                 <in class="big-title vbg">Comportamento</in>
             </panel>
+
+
+
+            <!--------------------------------- 35 -------------------------------->
+            <panel id="slide35_0" class="slide">
+                <in class="big-title vbg">Atualização Dinâmica</in>
+            </panel>
+
+
+
+            <!--------------------------------- 35 -------------------------------->
+            <dock id="slide35_2" class="slide">
+                <style type="text/css">
+                    #imgAtu1 { background: url(no-change-tree.png) no-repeat center center; background-size: 600px; }
+                </style>
+                <panel class="title"><in>Atualização Dinâmica</in></panel>
+                <panel id="imgAtu1" class="content">
+
+                </panel>
+            </dock>
+
+
+
+            <!--------------------------------- 35 -------------------------------->
+            <dock id="slide35_3" class="slide">
+                <style type="text/css">
+                    #imgAtu2 { background: url(css-change.png) no-repeat center center; background-size: 600px; }
+                </style>
+                <panel class="title"><in>Atualização Dinâmica</in></panel>
+                <panel id="imgAtu2" class="content">
+
+                </panel>
+            </dock>
+
+
+
+            <!--------------------------------- 35 -------------------------------->
+            <dock id="slide35_6" class="slide">
+                <style type="text/css">
+                    #imgAtu3 { background: url(child-change.png) no-repeat center center; background-size: 600px; }
+                </style>
+                <panel class="title"><in>Atualização Dinâmica</in></panel>
+                <panel id="imgAtu3" class="content">
+
+                </panel>
+            </dock>
+
+
+
+            <!--------------------------------- 35 -------------------------------->
+            <dock id="slide35_9" class="slide">
+                <style type="text/css">
+                    #imgAtu4 { background: url(arrange.png) no-repeat center center; background-size: 600px; }
+                </style>
+                <panel class="title"><in>Atualização Dinâmica</in></panel>
+                <panel id="imgAtu4" class="content">
+
+                </panel>
+            </dock>
+
+
+
+            <!--------------------------------- 35 -------------------------------->
+            <dock id="slide35_12" class="slide">
+                <style type="text/css">
+                    #imgAtu5 { background: url(layout.png) no-repeat center center; background-size: 600px; }
+                </style>
+                <panel class="title"><in>Atualização Dinâmica</in></panel>
+                <panel id="imgAtu5" class="content">
+
+                </panel>
+            </dock>
 
         </panel>
     </fit>
