--- a/paginas_teste/testeGridMultiDireto.html
+++ b/paginas_teste/testeGridMultiDireto.html
@@ -2,10 +2,10 @@
 <head>
     <meta charset="utf-8">
     <title>Exemplos</title>
-    <script src="../js/HtmlAlign.js"></script>
+    <script src="../dist/HtmlAlign.js"></script>
     <script type="text/javascript">
-        HtmlAlign.Config.VerifyStyleSheetPeriodicaly = true;
-        HtmlAlign.Config.VerifyStyleSheetPeriodicalyDelay = 400;
+            HtmlAlign.Config.VerifyStyleSheetPeriodicaly = true;
+            HtmlAlign.Config.VerifyStyleSheetPeriodicalyDelay = 400;
     </script>
 
     <style>
