--- a/paginas_teste/testeGridMultiDiretoAnin.html
+++ b/paginas_teste/testeGridMultiDiretoAnin.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>Exemplos</title>
-    <script src="../js/HtmlAlign.js"></script>
+    <script src="../dist/HtmlAlign.js"></script>
 
     <style>
         grid {
