--- a/paginas_teste/streach300divs.html
+++ b/paginas_teste/streach300divs.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <title>Exemplos</title>
-    <script src="../js/HtmlAlign.js"></script>
+    <script src="../dist/HtmlAlign.js"></script>
     <script type="text/javascript">
-        HtmlAlign.Config.VerifyStyleSheetPeriodicaly = true;
-        HtmlAlign.Config.VerifyStyleSheetPeriodicalyDelay = 400;
+                HtmlAlign.Config.VerifyStyleSheetPeriodicaly = true;
+                HtmlAlign.Config.VerifyStyleSheetPeriodicalyDelay = 400;
     </script>
 
     <style>
@@ -28,7 +28,7 @@
 </head>
 <body>
     <script type="text/javascript">
-        HtmlAlign.Config.ResizeDelay = 500;
+                HtmlAlign.Config.ResizeDelay = 500;
 
         function criarElementos() {
             var lastEl;
